block delete of player of another account
